--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Adam/Desktop/ITC205Ass3/lib/java-hamcrest-2.0.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Adam/Desktop/ITC205Ass3/lib/mockito-core-1.10.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Adam/Desktop/ITC205Ass3/lib/objenesis-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
