--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="entityIntegrationTests"/>
 	<classpathentry kind="src" path="DAOIntegrationTests"/>
 	<classpathentry kind="src" path="operationTests"/>
+	<classpathentry kind="src" path="ScenarioTests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/Adam/Desktop/ITC205Ass3/lib/java-hamcrest-2.0.0.0.jar"/>
